Enhance CORS configuration, add Todo update endpoint, improve transaction handling
- SecurityConfig.java: Updated CORS settings to dynamically allow origins from 192.168.*.* instead of hardcoding specific IPs.
- TodosController.java: Added PUT /update-todos endpoint to allow updating todos with user validation.
- TransactionController.java:
  - Added logging for debugging authentication and transaction handling.
  - Fixed transaction date assignment to use the provided date instead of defaulting to LocalDate.now().
- Financial.java: Added @JsonProperty('transaction_date') for better JSON serialization.
- User.java: Removed @JsonIgnore on password to allow password serialization where needed.